Fixed navigation tabs on mobile devices and improved look on desktop.

--- a/style.css
+++ b/style.css
@@ -35,18 +35,21 @@ nav .selected {
 }
 
 nav ul {
-  display: inline-block;
+  display: flex;
   list-style-type: none;
-  margin: 0;
+  margin: auto;
   padding: 0;
   overflow: hidden;
   background-color: var(--navbackground);
+  justify-content: center;
 }
 
 nav ul li {
   float: left;
   padding: 0;
   margin: 0;
+  display: flex;
+  align-items: center;
   /* box-shadow: 0 10px 10px #000000; */
 }
 
@@ -54,6 +57,7 @@ nav ul li a {
   display: block;
   padding: 12px;
 }
+
 
 /* Headings */
 h1 {
